<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sv"
    style="@style/ll_default" >

    <LinearLayout
        style="@style/ll_default"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll1"
            style="@style/ll_default" >

            <TextView
                android:id="@+id/textView1"
                style="@style/text_view"
                android:text="@string/time7" />

            <Button
                android:id="@+id/bt1"
                style="@style/button"
                android:text="@string/btText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            style="@style/ll_default" >

            <TextView
                android:id="@+id/tv8"
                style="@style/text_view"
                android:text="@string/time8" />

            <Button
                android:id="@+id/bt2"
                style="@style/button"
                android:text="@string/btText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll3"
            style="@style/ll_default" >

            <TextView
                android:id="@+id/tv9"
                style="@style/text_view"
                android:text="@string/time9" />

            <Button
                android:id="@+id/bt3"
                style="@style/button"
                android:text="@string/btText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll4"
            style="@style/ll_default" >

            <TextView
                android:id="@+id/tv10"
                style="@style/text_view"
                android:text="@string/time10" />

            <Button
                android:id="@+id/bt4"
                style="@style/button"
                android:text="@string/btText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll5"
            style="@style/ll_default" >

            <TextView
                android:id="@+id/tv11"
                style="@style/text_view"
                android:text="@string/time11" />

            <Button
                android:id="@+id/bt5"
                style="@style/button"
                android:text="@string/btText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll6"
            style="@style/ll_default" >

            <TextView
                android:id="@+id/tv12"
                style="@style/text_view"
                android:text="@string/time12" />

            <Button
                android:id="@+id/bt6"
                style="@style/button"
                android:text="@string/btText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll7"
            style="@style/ll_default" >

            <TextView
                android:id="@+id/tv13"
                style="@style/text_view"
                android:text="@string/time13" />

            <Button
                android:id="@+id/bt7"
                style="@style/button"
                android:text="@string/btText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll8"
            style="@style/ll_default" >

            <TextView
                android:id="@+id/tv14"
                style="@style/text_view"
                android:text="@string/time14" />

            <Button
                android:id="@+id/bt8"
                style="@style/button"
                android:text="@string/btText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll9"
            style="@style/ll_default" >

            <TextView
                android:id="@+id/tv15"
                style="@style/text_view"
                android:text="@string/time15" />

            <Button
                android:id="@+id/bt9"
                style="@style/button"
                android:text="@string/btText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll10"
            style="@style/ll_default" >

            <TextView
                android:id="@+id/tv16"
                style="@style/text_view"
                android:text="@string/time16" />

            <Button
                android:id="@+id/bt10"
                style="@style/button"
                android:text="@string/btText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll11"
            style="@style/ll_default" >

            <TextView
                android:id="@+id/tv17"
                style="@style/text_view"
                android:text="@string/time17" />

            <Button
                android:id="@+id/bt11"
                style="@style/button"
                android:text="@string/btText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll12"
            style="@style/ll_default" >

            <TextView
                android:id="@+id/tv18"
                style="@style/text_view"
                android:text="@string/time18" />

            <Button
                android:id="@+id/bt12"
                style="@style/button"
                android:text="@string/btText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll13"
            style="@style/ll_default" >

            <TextView
                android:id="@+id/tv19"
                style="@style/text_view"
                android:text="@string/time19" />

            <Button
                android:id="@+id/bt13"
                style="@style/button"
                android:text="@string/btText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll14"
            style="@style/ll_default" >

            <TextView
                android:id="@+id/tv20"
                style="@style/text_view"
                android:text="@string/time20" />

            <Button
                android:id="@+id/bt14"
                style="@style/button"
                android:text="@string/btText" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>